fixed alignment and large spacer  at the bottom of the page (#107)

--- a/src/apps/seo/src/views/RedirectsManager/RedirectsTable/RedirectsTableHeader/RedirectsTableHeader.less
+++ b/src/apps/seo/src/views/RedirectsManager/RedirectsTable/RedirectsTableHeader/RedirectsTableHeader.less
@@ -21,6 +21,8 @@
     .column {
       border-bottom: 3px solid @zesty-field-blue;
       padding-bottom: 0.1rem;
+      line-height: 24px;
+      font-size: 16px;
     }
     &:hover,
     &:active,
